--- a/users_groups/meta/main.yml
+++ b/users_groups/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
   author: your name
+  role_name: users_groups
   description: your role description
   company: your company (optional)
 
